major bug fixes

--- a/CreateTest/templates/CreateTest/snippets/base.html
+++ b/CreateTest/templates/CreateTest/snippets/base.html
@@ -91,6 +91,7 @@
         <a href="#" class="list-group-item list-group-item-action bg-light">Laporan</a>
         <a href="#" class="list-group-item list-group-item-action bg-light">Pengaturan</a>
         <a href="#" class="list-group-item list-group-item-action bg-light">Ekspor/Impor</a>
+        <a href="{% url 'create:authorLogout' %}" class="list-group-item list-group-item-action bg-light">Keluar</a>
       </div>
     </div>
     <!-- /#sidebar-wrapper -->
