--- a/Test/templates/Test/snippets/detailtestsession.html
+++ b/Test/templates/Test/snippets/detailtestsession.html
@@ -21,7 +21,7 @@
         </div></li>
     <li class="list-group-item"><div class="row">
         <div class="col-md-3 pl-2 my-auto"><div class="card-title text-muted my-auto h6 text-uppercase">Jumlah Soal</div></div>
-        <div class="col-md-9 pl-2"><div class="card-text my-auto">{{testInfo.questionCount}}</div></div>
+        <div class="col-md-9 pl-2"><div class="card-text my-auto">{{questionCount}}</div></div>
         </div></li>
     <li class="list-group-item"><div class="row">
         <div class="col-md-3 pl-2 my-auto"><div class="card-title text-muted my-auto h6 text-uppercase">Jadwal / Waktu Mulai Tes</div></div>
