--- a/CBT/templates/index.html
+++ b/CBT/templates/index.html
@@ -1,8 +1,30 @@
 {% extends 'snippets/base.html' %}
-        <!-- Masthead-->
+        
     {% block no_container %}
     {% block navbar %}
-        <!-- Navigation-->
+    <div class="container-lg h-100">
+      <div class="row py-4 h-100">
+        {% block leftside %}
+          {% include 'leftside.html' %}
+          {% endblock leftside %}
+          <div class=" col-md-6 d-flex">
+            <div class="my-auto d-flex align-items-center flex-wrap text-center">
+              <div class="align-items-center">
+                <h2 class="text-center font-weight-bold pt-3 pb-3 flex-fill ">Selamat Mengerjakan!</h2>
+
+                <a class="btn btn-success btn-lg text-uppercase js-scroll-trigger mb-2" href="{% url 'test:join' %}">Mulai Mengerjakan</a>
+                <a class="btn btn-success btn-lg text-uppercase js-scroll-trigger mb-2" href="{% url 'test:resume' %}">Lanjutkan Test Saya</a>
+                <p class="mt-1"><hr></p>
+               
+                <a class=" btn btn-warning btn-lg text-uppercase js-scroll-trigger" href="#">Buat Sebuah Test</a>
+                           <!-- <h2 class="text-center font-weight-bold pt-3 flex-fill ">CBT SIMPEL</h2> -->
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+        <!-- Navigation
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
                 <a class="navbar-brand js-scroll-trigger" href="#page-top">CBT SIMPEL</a>
@@ -15,7 +37,9 @@
                 <a class="btn btn-success btn-lg text-uppercase js-scroll-trigger mb-2" href="{% url 'test:join' %}">Mulai Mengerjakan</a>
                 <a class="btn btn-success btn-lg text-uppercase js-scroll-trigger mb-2" href="{% url 'test:resume' %}">Lanjutkan Test Saya</a>
                 <p class="mt-1"><hr></p>
+                {% comment %}
                 <a class=" btn btn-warning btn-lg text-uppercase js-scroll-trigger" href="{% url 'create:index' %}">Buat Sebuah Test</a>
+                {% endcomment %}
             </div>
-        </header>
+        </header> -->
         {% endblock no_container %}
