--- a/Test/templates/Test/doTest.html
+++ b/Test/templates/Test/doTest.html
@@ -143,7 +143,7 @@
 
         function makeTimer() {
         var endTime = (
-                {{takerQuery.timeStart | date:"U"}}
+                {takerQuery.timeStart | date:"U"}}
                 +
                 ({{testInfo.timeLimit}}*60) 
                 );
