--- a/CBT/templates/index.html
+++ b/CBT/templates/index.html
@@ -3,7 +3,7 @@
     {% block no_container %}
     {% block navbar %}
     <div class="container-lg h-100">
-      <div class="row py-4 h-100">
+      <div class="row py-4  h-100">
         {% block leftside %}
           {% include 'leftside.html' %}
           {% endblock leftside %}
@@ -16,7 +16,7 @@
                 <a class="btn btn-success btn-lg text-uppercase js-scroll-trigger mb-2" href="{% url 'test:resume' %}">Lanjutkan Test Saya</a>
                 <p class="mt-1"><hr></p>
                
-                <a class=" btn btn-warning btn-lg text-uppercase js-scroll-trigger" href="#">Buat Sebuah Test</a>
+                <a class="mb-4 btn btn-warning btn-lg text-uppercase js-scroll-trigger" href="#">Buat Sebuah Test</a>
                            <!-- <h2 class="text-center font-weight-bold pt-3 flex-fill ">CBT SIMPEL</h2> -->
 
               </div>
