--- a/Test/templates/Test/overviewTest.html
+++ b/Test/templates/Test/overviewTest.html
@@ -3,6 +3,7 @@
 {% block web_title %}
 INFORMASI PESERTA DAN TES
 {% endblock web_title %}
+{%block no_container%}
   {% block card_header %}
     <h3 class="m-1"><strong>INFORMASI PESERTA DAN TES</strong></h3>
   {% endblock card_header %}
@@ -33,4 +34,5 @@ INFORMASI PESERTA DAN TES
         {% endif %}
     {% endif %}
 {% endblock card_footer %}
+{%endblock no_container%}
 
