--- a/Test/templates/Test/joinTest.html
+++ b/Test/templates/Test/joinTest.html
@@ -3,20 +3,46 @@
 {% block web_title %}
 Masukan Kode Tes
 {% endblock web_title %}
-{% block main_container %}
-    <h2 class="text-center font-weight-bold">Masukan Kode Tes Yang Akan Anda Ikuti</h2>
-    {% if form.errors.testCode %}
-    <div class="alert alert-danger mt-2 alert-dismissible fade show pb-0" role="alert">
-      <p> Tes dengan kode tersebut tidak ditemukan</p>
-  </div>
-  {% endif %}
-<form method="POST" class="row mx-1 ">
-    {% csrf_token %}
-    {{form.testCode|attr:"placeholder:Masukan Kode"|attr:"pattern:\d*" |attr:"maxlength:6"|add_class:"form-control  col-sm-9"}}
-    <button class="btn btn-primary mt-1 my-sm-0 col-sm-3 text-nowrap" type="submit">Mulai</button>
-  </form>
-  {% comment "" %}
-<p class="text-capitalize text-muted text-center h6">Sudah mulai mengerjakan?  <br><a href="{% url 'test:resume' %}">Lanjutkan dengan kunci sesi yang anda miliki disini</a> </p>
+{% block no_container %}
+    <div class="container-lg px-3 h-100">
+      <div class="row py-4 h-100">
+            <div class=" m-auto d-flex align-items-center flex-wrap text-center">
+              <div class="align-items-center">
+            <div class="row d-flex justify-content-center site-banner-mini">
+                <div class="">
+                       <svg xmlns="http://www.w3.org/2000/svg" width="40px" height="40px" fill="currentColor" class="bi pr-2 bi-arrow-up-right-square-fill" viewBox="0 0 16 16">
+  <path d="M14 0a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12zM5.904 10.803 10 6.707v2.768a.5.5 0 0 0 1 0V5.5a.5.5 0 0 0-.5-.5H6.525a.5.5 0 1 0 0 1h2.768l-4.096 4.096a.5.5 0 0 0 .707.707z"/>
+</svg>
+                    
+                </div>
+                
+                <div class="pb-2">
+                    
+                   <h1 class=" mx-auto text-break font-weight-bold"><span class="text-success">CBT</span> SIMPEL</h1>
+                </div>
+                 </div>
+                    <h4 class=" pb-2 text-center my-auto align-items-center flex-fill font-weight-bold">Masukan Kode Tes Yang Akan Anda Ikuti</h4>
+                   
+                    {% if form.errors.testCode %}
+                    <div class="alert alert-danger mt-2 alert-dismissible fade show pb-0" role="alert">
+                      <p> Tes dengan kode tersebut tidak ditemukan</p>
+                  </div>
+                  {% endif %}
+                <form method="POST" class="row mx-1 ">
+                    {% csrf_token %}
+                    {{form.testCode|attr:"placeholder:Masukan Kode"|attr:"pattern:\d*" |attr:"maxlength:6" |add_class:"form-control form-control-lg col-sm-9"}}
+                    <button class="btn btn-success mt-1 my-sm-0 col-sm-3 text-nowrap" type="submit">Mulai</button>
+                  </form>
+                  {% comment "" %}
+                <p class="text-capitalize text-muted text-center h6">Sudah mulai mengerjakan?  <br><a href="{% url 'test:resume' %}">Lanjutkan dengan kunci sesi yang anda miliki disini</a> </p>
+                
+         
+              </div>
+            </div>
+          </div>
+        
+      </div>
+
   {% endcomment %}
 
-{% endblock main_container %}
+{% endblock no_container %}
